examples/compiler_errors/exposing/ExposingTarget.flx
module ExposingTarget {
    public fn greet(name: String) -> String {
        "Hello, " + name
    }

    fn secret() -> Int {
        42
    }
}
